--- a/geolocator_android/android/build.gradle
+++ b/geolocator_android/android/build.gradle
@@ -26,17 +26,18 @@ android {
         namespace("com.baseflow.geolocator")
     }
 
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         minSdkVersion 16
+        minSdkVersion flutter.minSdkVersion
     }
     lintOptions {
         disable 'InvalidPackage'
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
     }
 }
 
