--- a/geolocator_android/pubspec.yaml
+++ b/geolocator_android/pubspec.yaml
@@ -5,8 +5,8 @@ issue_tracker: https://github.com/baseflow/flutter-geolocator/issues?q=is%3Aissu
 version: 4.6.1
 
 environment:
-  sdk: ">=2.15.0 <4.0.0"
-  flutter: ">=2.8.0"
+   sdk: ^3.5.0
+   flutter: ">=2.17.0"
 
 flutter:
   plugin:
